--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""
     />
-    <title>Quentin Lambkin</title>
+    <title>Quentin Lambkin !</title>
   </head>
   <body>
     <div id="root"></div>
